--- a/class_04_1_mouse_event.ipynb
+++ b/class_04_1_mouse_event.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,10 +185,10 @@
     "    \n",
     "    color = colors['yellow']\n",
     "    \n",
-    "    if event == cv2.EVENT_LBUTTONDOWN:   # cv2.EVENT_LBUTTONDOWN cv2.EVENT_FLAG_LBUTTON\n",
+    "    if event == cv2.EVENT_LBUTTONUP\t:   # cv2.EVENT_LBUTTONDOWN cv2.EVENT_FLAG_LBUTTON\n",
     "        if flags & cv2.EVENT_FLAG_CTRLKEY and flags & cv2.EVENT_FLAG_SHIFTKEY : # ctrl + shift\n",
     "            color = colors['green']\n",
-    "        elif flags & cv2.EVENT_FLAG_SHIFTKEY : # shift\n",
+    "        elif flags & cv2.EVENT_FLAG_LBUTTON : # shift\n",
     "            color = colors['blue']\n",
     "        elif flags & cv2.EVENT_FLAG_CTRLKEY : # ctrl\n",
     "            color = colors['red']        \n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,22 +265,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "276   158\n",
+      "577 --- 348\n",
+      "[276, 158, 577, 348]\n",
+      "634   168\n",
+      "298 --- 344\n",
+      "[276, 158, 577, 348, 634, 168, 298, 344]\n",
+      "433   243\n",
+      "509 --- 299\n",
+      "[276, 158, 577, 348, 634, 168, 298, 344, 433, 243, 509, 299]\n",
+      "439   357\n",
+      "584 --- 463\n",
+      "[276, 158, 577, 348, 634, 168, 298, 344, 433, 243, 509, 299, 439, 357, 584, 463]\n"
+     ]
+    }
+   ],
    "source": [
     "# display mouse coordinates \n",
     "import cv2\n",
     "\n",
+    "t = []\n",
     "def click_event(event, x, y, flags, params):\n",
-    "\n",
+    "    x1, y1, x2, y2 = 0, 0, 0, 0\n",
     "    if event == cv2.EVENT_LBUTTONDOWN: # checking for left mouse clicks\n",
-    "\n",
-    "#         print(x, ' ', y) # print the coordinates \n",
+    "        print(x, ' ', y) # print the coordinates\n",
+    "        t.extend([x, y])\n",
     "        font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "        cv2.putText(img, str(x) + ',' + str(y), (x,y), font,1, (0, 255, 255), 2) # displaying the coordinates on the image window\n",
     "        cv2.imshow('image', img)\n",
-    "\n",
+    "    if event == cv2.EVENT_LBUTTONUP:\n",
+    "        print(x, '---', y)\n",
+    "        x2, y2 = x, y\n",
+    "        font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "        cv2.putText(img, str(x) + ',' + str(y), (x,y), font,1, (0, 255, 255), 2) # displaying the coordinates on the image window\n",
+    "        cv2.imshow('image', img)\n",
+    "        t.extend([x, y])\n",
+    "        print(t)    \n",
+    "    \n",
     "    if event==cv2.EVENT_RBUTTONDOWN: # checking for right mouse clicks\n",
     "#         print(x, ' ', y)\n",
     "\n",
