--- a/class_06_1_IP_binary_threshold.ipynb
+++ b/class_06_1_IP_binary_threshold.ipynb
@@ -782,9 +782,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.7_YOLO",
+   "display_name": "CV-py36",
    "language": "python",
-   "name": "yolo"
+   "name": "cv2023_binh"
   },
   "language_info": {
    "codemirror_mode": {
@@ -796,7 +796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
